Add more equations

--- a/equations.html
+++ b/equations.html
@@ -34,6 +34,9 @@
     </nav>
 
     <div class="container">
+        <h3 style="padding-top:50px">Einstein's Equation</h3>
+        <p>Well, can't miss this one.</p>
+        <p><span class="math display">\[ E  = m{c^2} \]</span></p>
         <h3 style="padding-top:50px">Law of Gravitation</h3>
         <p>It is claimed that Newton was the one who came up.</p>
         <p><span class="math display">\[ F  = -G \frac{Mm}{r^2} \]</span></p>
@@ -43,6 +46,9 @@
         <h3 style="padding-top:50px">Euler's Identity</h3>
         <p>Saw this many times during my college and grad school days.</p>
         <p><span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span></p>
+        <h3 style="padding-top:50px">Wave Equation</h3>
+        <p>One of the basic equation in phyisics.</p>
+        <p><span class="math display">\[ \frac{\partial^2 f}{\partial x^2} = \frac{1}{c^2} \frac{\partial^2 f}{\partial t^2} \]</span></p>
     </div><!-- /.container -->
 
 
