--- a/equations.html
+++ b/equations.html
@@ -49,7 +49,10 @@
         <h3 style="padding-top:50px">Wave Equation</h3>
         <p>One of the basic equation in phyisics.</p>
         <p><span class="math display">\[ \frac{\partial^2 f}{\partial x^2} = \frac{1}{c^2} \frac{\partial^2 f}{\partial t^2} \]</span></p>
-    </div><!-- /.container -->
+        <h3 style="padding-top:50px">Bayes' theorem</h3>
+        <p>No wonder the Red Sox keep on signing lousy players.</p>
+        <p><span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span></p>
+      </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
