--- a/reference.html
+++ b/reference.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Equations</title>
+    <title>Reference</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -13,8 +13,8 @@
     <!-- Hightlight -->
     <link rel="stylesheet" href="css/prism.css">
     <script src="css/prism.js"></script>
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
     <link href="starter-template.css" rel="stylesheet">
-    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   </head>
 
   <body>
@@ -27,34 +27,23 @@
             <li><a href="perl.html">Perl</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
-            <li><a href="#">Equations</a></li>
-            <li><a href="reference.html">Reference</a></li>
+            <li><a href="equations.html">Equations</a></li>
+            <li><a href="#">Reference</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
-        <h3 style="padding-top:50px">Einstein's Equation</h3>
-        <p>Well, can't miss this one.</p>
-        <p><span class="math display">\[ E  = m{c^2} \]</span></p>
-        <h3 style="padding-top:50px">Law of Gravitation</h3>
-        <p>It is claimed that Newton was the one who came up.</p>
-        <p><span class="math display">\[ F  = -G \frac{Mm}{r^2} \]</span></p>
-        <h3 style="padding-top:50px">Gradiant</h3>
-        <p>You will see it in the start of vector analysis course.</p>
-        <p><span class="math display">\[ \nabla g(x, y, z) =\frac{\partial g}{\partial x}\hat{i} + \frac{\partial g}{\partial y}\hat{j} + \frac{\partial g}{\partial z}\hat{k} \]</span></p>
-        <h3 style="padding-top:50px">Euler's Identity</h3>
-        <p>Saw this many times during my college and grad school days.</p>
-        <p><span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span></p>
-        <h3 style="padding-top:50px">Wave Equation</h3>
-        <p>One of the basic equation in phyisics.</p>
-        <p><span class="math display">\[ \frac{\partial^2 f}{\partial x^2} = \frac{1}{c^2} \frac{\partial^2 f}{\partial t^2} \]</span></p>
-        <h3 style="padding-top:50px">Bayes' theorem</h3>
-        <p>No wonder the Red Sox keep on signing lousy players.</p>
-        <p><span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span></p>
-      </div><!-- /.container -->
-
+      <h3 style="padding-top:50px">Reference for Golang</h3>
+      <md-block src="golang.md">
+        `nonexistent.md` was *not* found
+      </md-block>
+      <h3 style="padding-top:50px">Reference for Node.js</h3>
+      <md-block src="nodejs.md">
+        `nonexistent.md` was *not* found
+      </md-block>
+    </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
