--- a/go.html
+++ b/go.html
@@ -27,6 +27,7 @@
             <li><a href="python.html">Python</a></li>
             <li><a href="#">Go</a></li>
             <li><a href="equations.html">Equations</a></li>
+            <li><a href="reference.html">Reference</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
