--- a/python.html
+++ b/python.html
@@ -27,6 +27,7 @@
             <li><a href="#">Python</a></li>
             <li><a href="go.html">Go</a></li>
             <li><a href="equations.html">Equations</a></li>
+            <li><a href="reference.html">Reference</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
