Fix few items and add Pythpn ref

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <script src="js/script.js" type="text/javascript"></script>
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Personal reference page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -70,6 +70,7 @@
           <div><a href="https://go.dev/">Go</a></div>
           <div><a href="https://www.python.org/">Python</a></div>
           <div><a href="https://www.perl.org/">Perl</a></div>
+          <div><a href="https://nodejs.org/en">Node.js</a></div>
         </section>
       </div><br>
 
