--- a/reference.html
+++ b/reference.html
@@ -43,6 +43,10 @@
       <md-block src="nodejs.md">
         `nonexistent.md` was *not* found
       </md-block>
+      <h3 style="padding-top:50px">Reference for Python</h3>
+      <md-block src="python.md">
+        `nonexistent.md` was *not* found
+      </md-block>
     </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
