Modify to open on different tab

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
       <div>
         <section style="border:solid;border-radius:20px;font-size:large;padding-left:10px;padding-bottom:5px">
           <h4>Useful Links</h4>
-          <div><a href="https://playwright.dev/">Playwright site</a></div>
-          <div><a href="https://nightwatchjs.org/">Nightwatch site</a></div>
-          <div><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document">Web API Document</a></div>
-          <div><a href="https://www.jetbrains.com">Jetbrains site</a></div>
+          <div><a href="https://playwright.dev/" target="_blank">Playwright site</a></div>
+          <div><a href="https://nightwatchjs.org/" target="_blank">Nightwatch site</a></div>
+          <div><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document" target="_blank">Web API Document</a></div>
+          <div><a href="https://www.jetbrains.com" target="_blank">Jetbrains site</a></div>
         </section>
       </div><br>
 
       <div>
         <section style="border:solid;border-radius:20px;font-size:large;padding-left:10px;padding-bottom:5px">
           <h4>Development Links</h4>
-          <div><a href="https://go.dev/">Go</a></div>
-          <div><a href="https://www.python.org/">Python</a></div>
-          <div><a href="https://www.perl.org/">Perl</a></div>
-          <div><a href="https://nodejs.org/en">Node.js</a></div>
+          <div><a href="https://go.dev/" target="_blank">Go</a></div>
+          <div><a href="https://www.python.org/" target="_blank">Python</a></div>
+          <div><a href="https://www.perl.org/" target="_blank">Perl</a></div>
+          <div><a href="https://nodejs.org/en" target="_blank">Node.js</a></div>
         </section>
       </div><br>
 
