--- a/equations.html
+++ b/equations.html
@@ -29,6 +29,7 @@
             <li><a href="go.html">Go</a></li>
             <li><a href="#">Equations</a></li>
             <li><a href="reference.html">Reference</a></li>
+              <li><a href="rotk.html">ROTK</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
