--- a/go.html
+++ b/go.html
@@ -28,6 +28,7 @@
             <li><a href="#">Go</a></li>
             <li><a href="equations.html">Equations</a></li>
             <li><a href="reference.html">Reference</a></li>
+              <li><a href="rotk.html">ROTK</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
