--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="go.html">Go</a></li>
             <li><a href="equations.html">Equations</a></li>
             <li><a href="reference.html">Reference</a></li>
+            <li><a href="rotk.html">ROTK</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
