--- a/rotk.html
+++ b/rotk.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Reference</title>
+    <title>ROTK</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -13,6 +13,7 @@
     <!-- Hightlight -->
     <link rel="stylesheet" href="css/prism.css">
     <script src="css/prism.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
     <link href="starter-template.css" rel="stylesheet">
   </head>
@@ -28,26 +29,24 @@
             <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
             <li><a href="equations.html">Equations</a></li>
-            <li><a href="#">Reference</a></li>
-            <li><a href="rotk.html">ROTK</a></li>
+            <li><a href="reference.html">Reference</a></li>
+            <li><a href="#">ROTK</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
-      <h3 style="padding-top:50px">Reference for Golang</h3>
-      <md-block src="golang.md">
-        `nonexistent.md` was *not* found
-      </md-block>
-      <h3 style="padding-top:50px">Reference for Node.js</h3>
-      <md-block src="nodejs.md">
-        `nonexistent.md` was *not* found
-      </md-block>
-      <h3 style="padding-top:50px">Reference for Python</h3>
-      <md-block src="python.md">
-        `nonexistent.md` was *not* found
-      </md-block>
+    <div class="container" style="margin-top: 80px">
+        <!-- <script>getrotktwelve()</script>-->
+        <br>
+        ROTK Version&nbsp;<select id="version" onChange="dispdata();">
+          <option value="" selected disabled hidden>Choose here</option>
+          <option value="rotk11">ROTK11</option>
+          <option value="rotk12">ROTK12</option>
+        </select><br><br>
+        <div id="genlist">
+          <p>Table will load here</p>
+        </div>
     </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
