--- a/rotk.html
+++ b/rotk.html
@@ -43,6 +43,7 @@
           <option value="" selected disabled hidden>Choose here</option>
           <option value="rotk11">ROTK11</option>
           <option value="rotk12">ROTK12</option>
+          <option value="namco">NAMCO</option>
         </select><br><br>
         <div id="genlist">
           <p>Table will load here</p>
