--- a/go.html
+++ b/go.html
@@ -34,8 +34,17 @@
       </div>
     </nav>
 
-    <div class="container">
-        <h3 style="padding-top:50px">Get file list</h3>
+    <div class="container" style="margin-top: 80px">
+
+        <h3 style="text-align:center">Go</h3>
+
+        <div>Often a program can be written as one linear path of code that performs a single task and finishes. When this is possible, always choose this option, because this
+            type of program is usually simple to write and maintain. But there are times when executing multiple tasks concurrently has greater benefit. One example is with a web
+            service that can receive multiple requests for data on individual sockets at the same time. Each socket request is unique and can be independently processed from any other.
+            Having the ability to execute requests concurrently can dramatically improve the performance of this type of system. With this in mind, support for concurrency has been
+            built directly into Go’s language and runtime.</div><br>
+
+        <p>Here is one example of getting file list of a given directory recursively.</p>
         <pre>
             <code class="language-go">
             package main
