--- a/python.html
+++ b/python.html
@@ -34,9 +34,18 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="margin-top: 80px">
 
-        <h3 style="padding-top:50px">Get file list</h3>
+        <h3 style="text-align:center">Python</h3>
+
+        <div>Textual information is the most important form of data in almost every application. In an online shopping website, we use text to provide production descriptions.
+            Textual data, as well as files and numeric data, can all be saved as text files, reading which all requires us to process strings. We know that machine learning is trending,
+            and one critical machine learning specialty is termed natural language processing (NLP). NLP is concerned with extracting information from texts.
+            Because of this, text processing is an inevitable step in preparing the data in these applications. In short, there are numerous real-life cases where we need to process
+            and format strings properly.</div><br>
+
+        <p>Here is an example of how to get a file list from an assigned directory recursively.</p>
+
         <pre>
             <code class="language-python">
             import sys, shutil, os, re
