--- a/rotk.html
+++ b/rotk.html
@@ -54,7 +54,7 @@
                   <option value="advisor">Advisors</option>
                 </select>
             </span>
-            <span><button onclick="dispdata();">Reload Data</button></span>
+            <span><button id="reloadbutton" onclick="dispdata();">Reload Data</button></span>
         <br><br>
         <div id="genlist">
           <p>Table will load here</p>
