--- a/books.html
+++ b/books.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Reference</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <script src="js/script.js" type="text/javascript"></script>   
+    <title>Books for Reading</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
     <!-- Custom styles for this template -->
-    <!-- Hightlight -->
-    <link rel="stylesheet" href="css/prism.css">
-    <script src="css/prism.js"></script>
-    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
     <link href="starter-template.css" rel="stylesheet">
   </head>
 
@@ -35,22 +36,32 @@
       </div>
     </nav>
 
-    <div class="container">
-      <h4 style="padding-top:50px">Looking for some <a href="books.html">books</a>?</h4>
-      <h3 style="padding-top:20px">Reference for Golang</h3>
-      <md-block src="golang.md">
-        `nonexistent.md` was *not* found
-      </md-block>
-      <h3 style="padding-top:50px">Reference for Node.js</h3>
-      <md-block src="nodejs.md">
-        `nonexistent.md` was *not* found
-      </md-block>
-      <h3 style="padding-top:50px">Reference for Python</h3>
-      <md-block src="python.md">
-        `nonexistent.md` was *not* found
-      </md-block>
-    </div><!-- /.container -->
+    <div class="container" style="margin-top: 80px">
+    <h4>Python books from O'reilly Media</h4>
+    <div id="python-oreilly"></div>
+    <script>
+      getbooks("oreilly","Python","python-oreilly");
+    </script>
 
+    <h4>Javascript books from O'reilly Media</h4>
+    <div id="javascript-oreilly"></div>
+    <script>
+      getbooks("oreilly","Javascript","javascript-oreilly");
+    </script>
+
+    <h4>React books from O'reilly Media</h4>
+    <div id="react-oreilly"></div>
+    <script>
+      getbooks("oreilly","React","react-oreilly");
+    </script>
+
+    <h4>Go books from Manning Pulishing</h4>
+    <div id="go-manning"></div>
+    <script>
+      getbooks("manning","Go","go-manning");
+    </script>
+
+    </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
