--- a/equations.html
+++ b/equations.html
@@ -27,7 +27,7 @@
             <li><a href="perl.html">Perl</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
-            <li><a href="#">Equations</a></li>
+            <li><a href="equations.html">Equations</a></li>
             <li><a href="reference.html">Reference</a></li>
               <li><a href="rotk.html">ROTK</a></li>
           </ul>
@@ -54,6 +54,7 @@
         <h3 style="padding-top:50px">Bayes' theorem</h3>
         <p>No wonder the Red Sox keep on signing lousy players.</p>
         <p><span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span></p>
+        <p>Topics with Linear Algebra : <a href="zvsh.html">Here</a></p>
       </div><!-- /.container -->
 
 
