Added Java reference

--- a/reference.html
+++ b/reference.html
@@ -49,6 +49,10 @@
       <md-block src="python.md">
         `nonexistent.md` was *not* found
       </md-block>
+      <h3 style="padding-top:50px">Reference for Java</h3>
+      <md-block src="java.md">
+        `nonexistent.md` was *not* found
+      </md-block>
     </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
