--- a/go.html
+++ b/go.html
@@ -25,8 +25,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="perl.html">Perl</a></li>
             <li><a href="python.html">Python</a></li>
-            <li><a href="#">Go</a></li>
-            <li><a href="equations.html">Equations</a></li>
+            <li><a href="go.html">Go</a></li>
+            <li><a href="articles.html">Articles</a></li>
             <li><a href="reference.html">Reference</a></li>
             <li><a href="rotk.html">ROTK</a></li>
           </ul>
