--- a/reference.html
+++ b/reference.html
@@ -27,7 +27,7 @@
             <li><a href="perl.html">Perl</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
-            <li><a href="equations.html">Equations</a></li>
+            <li><a href="articles.html">Articles</a></li>
             <li><a href="#">Reference</a></li>
             <li><a href="rotk.html">ROTK</a></li>
           </ul>
@@ -47,10 +47,6 @@
       </md-block>
       <h3 style="padding-top:50px">Reference for Python</h3>
       <md-block src="python.md">
-        `nonexistent.md` was *not* found
-      </md-block>
-      <h3 style="padding-top:50px">Reference for Java</h3>
-      <md-block src="java.md">
         `nonexistent.md` was *not* found
       </md-block>
     </div><!-- /.container -->
