--- a/articles.html
+++ b/articles.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ROTK</title>
+    <title>Equations</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <!-- Hightlight -->
-    <link rel="stylesheet" type="text/css" href="css/prism.css">
+    <link rel="stylesheet" href="css/prism.css">
     <script src="css/prism.js"></script>
-    <script src="js/script.js" type="text/javascript"></script>
-    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
-    <link href="starter-template.css" type="text/css"  rel="stylesheet">
+    <link href="starter-template.css" rel="stylesheet">
+    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   </head>
 
   <body>
@@ -31,35 +29,34 @@
             <li><a href="go.html">Go</a></li>
             <li><a href="articles.html">Articles</a></li>
             <li><a href="reference.html">Reference</a></li>
-            <li><a href="rotk.html">ROTK</a></li>
+              <li><a href="rotk.html">ROTK</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container" style="margin-top: 80px">
-        <!-- <script>getrotktwelve()</script>-->
-        <br>
-        ROTK Version&nbsp;<select id="version" onChange="dispdata();">
-          <option value="" selected disabled hidden>Choose here</option>
-          <option value="rotk11">ROTK11</option>
-          <option value="rotk12">ROTK12</option>
-          <option value="rotk14">ROTK14</option>
-          <option value="namco">NAMCO</option>
-        </select>
-            <span id="filter">
-                <select id="applyfilter" onChange="filterresult();">
-                  <option value="" selected disabled hidden>Choose here</option>
-                  <option value="general">Generals</option>
-                  <option value="advisor">Advisors</option>
-                </select>
-            </span>
-            <span><button id="reloadbutton" onclick="dispdata();">Reload Data</button></span>
-        <br><br>
-        <div id="genlist">
-          <p>Table will load here</p>
-        </div>
+      <div>
+        <section
+            style="
+                border: solid;
+                border-radius: 20px;
+                font-size: large;
+                padding-left: 10px;
+                padding-bottom: 12px;
+            "
+        >
+            <h4 style="padding-bottom: 5px;" >Basic Topic</h4>
+            <div>
+                <p><a href="./equations.html" target="_blank">List of Equations</a></p>
+                <p><a href="./probability.html" target="_blank">Basic Probability</a></p>
+            </div>
+        </section>
+    </div>
+
+
     </div><!-- /.container -->
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
