--- a/equations.html
+++ b/equations.html
@@ -27,9 +27,9 @@
             <li><a href="perl.html">Perl</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
-            <li><a href="equations.html">Equations</a></li>
+            <li><a href="articles.html">Articles</a></li>
             <li><a href="reference.html">Reference</a></li>
-              <li><a href="rotk.html">ROTK</a></li>
+            <li><a href="rotk.html">ROTK</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
