--- a/perl.html
+++ b/perl.html
@@ -26,7 +26,7 @@
             <li><a href="#">Perl</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
-            <li><a href="equations.html">Equations</a></li>
+            <li><a href="articles.html">Articles</a></li>
             <li><a href="reference.html">Reference</a></li>
               <li><a href="rotk.html">ROTK</a></li>
           </ul>
