--- a/probability.html
+++ b/probability.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ROTK</title>
+    <title>Equations</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <!-- Hightlight -->
-    <link rel="stylesheet" type="text/css" href="css/prism.css">
+    <link rel="stylesheet" href="css/prism.css">
     <script src="css/prism.js"></script>
-    <script src="js/script.js" type="text/javascript"></script>
-    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
-    <link href="starter-template.css" type="text/css"  rel="stylesheet">
+    <link href="starter-template.css" rel="stylesheet">
+    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   </head>
 
   <body>
@@ -38,28 +36,14 @@
     </nav>
 
     <div class="container" style="margin-top: 80px">
-        <!-- <script>getrotktwelve()</script>-->
-        <br>
-        ROTK Version&nbsp;<select id="version" onChange="dispdata();">
-          <option value="" selected disabled hidden>Choose here</option>
-          <option value="rotk11">ROTK11</option>
-          <option value="rotk12">ROTK12</option>
-          <option value="rotk14">ROTK14</option>
-          <option value="namco">NAMCO</option>
-        </select>
-            <span id="filter">
-                <select id="applyfilter" onChange="filterresult();">
-                  <option value="" selected disabled hidden>Choose here</option>
-                  <option value="general">Generals</option>
-                  <option value="advisor">Advisors</option>
-                </select>
-            </span>
-            <span><button id="reloadbutton" onclick="dispdata();">Reload Data</button></span>
-        <br><br>
-        <div id="genlist">
-          <p>Table will load here</p>
+
+        <div style="border:1px solid black;">To calculate permutation:
+            <p><span class="math display">\[ _{n}P_{r} = \dfrac{n!}{(n - r)!} \]</span></p>
         </div>
-    </div><!-- /.container -->
+
+
+
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
