--- a/python.html
+++ b/python.html
@@ -24,9 +24,9 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="perl.html">Perl</a></li>
-            <li><a href="#">Python</a></li>
+            <li><a href="python.html">Python</a></li>
             <li><a href="go.html">Go</a></li>
-            <li><a href="equations.html">Equations</a></li>
+            <li><a href="articles.html">Articles</a></li>
             <li><a href="reference.html">Reference</a></li>
               <li><a href="rotk.html">ROTK</a></li>
           </ul>
