--- a/articles.html
+++ b/articles.html
@@ -48,9 +48,11 @@
         >
             <h4 style="padding-bottom: 5px;" >Basic Topic</h4>
             <div>
-                <p><a href="./equations.html" target="_blank">List of Equations</a></p>
-                <p><a href="./probability.html" target="_blank">Basic Probability</a></p>
-            </div>
+                <p><a href="./equations.html">List of Equations</a></p>
+                <p><a href="./probability.html">Basic Probability</a></p>
+                <p><a href="./qm.html">The Schr&ouml;dinger Equation</a></p>
+                <p><a href="./zvsh.html">Eigenvalues &amp; Eigenvectors</a></p>
+              </div>
         </section>
     </div>
 
