--- a/books.html
+++ b/books.html
@@ -7,6 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <script
+            referrerpolicy="no-referrer-when-downgrade"
+            type="text/javascript"
+            src="https://api.onelink-preview.com/moxie.min.js"
+            data-oljs="PED04-42B6-C033-3161"
+        ></script>
     <script src="js/script.js" type="text/javascript"></script>   
     <title>Books for Reading</title>
 
@@ -37,6 +43,13 @@
     </nav>
 
     <div class="container" style="margin-top: 80px">
+
+    <h4>Machine Learning books from O'reilly Media</h4>
+    <div id="ml-oreilly"></div>
+    <script>
+        getbooks("oreilly","Machine_Learning","ml-oreilly");
+    </script>
+
     <h4>Python books from O'reilly Media</h4>
     <div id="python-oreilly"></div>
     <script>
