--- a/equations.html
+++ b/equations.html
@@ -12,6 +12,7 @@
     <!-- Custom styles for this template -->
     <!-- Hightlight -->
     <link rel="stylesheet" href="css/prism.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="css/prism.js"></script>
     <link href="starter-template.css" rel="stylesheet">
     <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
@@ -54,7 +55,6 @@
         <h3 style="padding-top:50px">Bayes' theorem</h3>
         <p>No wonder the Red Sox keep on signing lousy players.</p>
         <p><span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span></p>
-        <p>Topics with Linear Algebra : <a href="zvsh.html">Here</a></p>
       </div><!-- /.container -->
 
 
