--- a/qm.html
+++ b/qm.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Basic Probability</title>
+    <title>The Schr&ouml;dinger Equation</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,15 +39,16 @@
     <div class="container" style="margin-top: 80px">
 
         <div>
-          Probability is a branch in mathematics on how likely an event is to occur. Most probalilities are expressed as fractions, decimal numbers or percentages and are measured on a scaled between zero and one. If an event is impossible to occur, the probability is 0. A certain event has a probability of 1. Calculating permutations and combinations are essential on finding probabilities of an event.
-        </div>
-        <br>
-        <div style="border:1px solid black;"><span class="math-article" >To calculate permutation:</span>
-            <p><span class="math display">\[ _{n}P_{r} = \dfrac{n!}{(n - r)!} \]</span></p>
+          The Schr&ouml;dinger Equation was published in 1926, forming the basis for Quantum Mechanics.
         </div><br>
-        <div style="border:1px solid black;"><span class="math-article" >To calculate combination:</span>
-          <p><span class="math display">\[ _{n}C_{r} = \dfrac{n!}{r!(n - r)!} \]</span></p>
-      </div>
+
+        <div style="border:1px solid black;"><span class="math-article" >The initial form is:</span>
+          <p><span class="math display">\[ \hat{H}\Psi=E\Psi  \]</span></p>
+          <p><span class="math display">\[ -\dfrac{\hbar^{2}}{2m}\bigtriangledown ^{2} \Psi +U\Psi=E\Psi = i\hbar \dfrac{\partial \Psi}{\partial t} \]</span></p>
+        </div><br>
+        <p>Where the solution must satisfy the condition</p>
+        <p><span class="math display">\[ \int_{-\infty}^{\infty} \! \Psi^*\Psi \, \mathrm{d}x = 1\]</span></p>
+
 
 
 
