--- a/equations.html
+++ b/equations.html
@@ -1,70 +1,104 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Equations</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <script
+            referrerpolicy="no-referrer-when-downgrade"
+            type="text/javascript"
+            src="https://api.onelink-preview.com/moxie.min.js"
+            data-oljs="PED04-42B6-C033-3161"
+        ></script>
+        <title>Equations</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <!-- Hightlight -->
-    <link rel="stylesheet" href="css/prism.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="css/prism.js"></script>
-    <link href="starter-template.css" rel="stylesheet">
-    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  </head>
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Custom styles for this template -->
+        <!-- Hightlight -->
+        <link rel="stylesheet" href="css/prism.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <script src="css/prism.js"></script>
+        <link href="starter-template.css" rel="stylesheet" />
+        <script
+            type="text/javascript"
+            async=""
+            src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"
+        ></script>
+    </head>
 
-  <body>
+    <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="headercontainer">
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="perl.html">Perl</a></li>
+                        <li><a href="python.html">Python</a></li>
+                        <li><a href="go.html">Go</a></li>
+                        <li><a href="articles.html">Articles</a></li>
+                        <li><a href="reference.html">Reference</a></li>
+                        <li><a href="rotk.html">ROTK</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </nav>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="headercontainer">
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="perl.html">Perl</a></li>
-            <li><a href="python.html">Python</a></li>
-            <li><a href="go.html">Go</a></li>
-            <li><a href="articles.html">Articles</a></li>
-            <li><a href="reference.html">Reference</a></li>
-            <li><a href="rotk.html">ROTK</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+        <div class="container">
+            <h3 style="padding-top: 50px">Einstein's Equation</h3>
+            <p>Well, can't miss this one.</p>
+            <p><span class="math display">\[ E = m{c^2} \]</span></p>
+            <h3 style="padding-top: 50px">Law of Gravitation</h3>
+            <p>It is claimed that Newton was the one who came up.</p>
+            <p><span class="math display">\[ F = -G \frac{Mm}{r^2} \]</span></p>
+            <h3 style="padding-top: 50px">Gradiant</h3>
+            <p>You will see it in the start of vector analysis course.</p>
+            <p>
+                <span class="math display"
+                    >\[ \nabla g(x, y, z) =\frac{\partial g}{\partial x}\hat{i}
+                    + \frac{\partial g}{\partial y}\hat{j} + \frac{\partial
+                    g}{\partial z}\hat{k} \]</span
+                >
+            </p>
+            <h3 style="padding-top: 50px">Euler's Identity</h3>
+            <p>Saw this many times during my college and grad school days.</p>
+            <p>
+                <span class="math display"
+                    >\[ e^{i \theta} = cos \theta + isin \theta \]</span
+                >
+            </p>
+            <h3 style="padding-top: 50px">Wave Equation</h3>
+            <p>One of the basic equation in phyisics.</p>
+            <p>
+                <span class="math display"
+                    >\[ \frac{\partial^2 f}{\partial x^2} = \frac{1}{c^2}
+                    \frac{\partial^2 f}{\partial t^2} \]</span
+                >
+            </p>
+            <h3 style="padding-top: 50px">Bayes' theorem</h3>
+            <p>No wonder the Red Sox keep on signing lousy players.</p>
+            <p>
+                <span class="math display"
+                    >\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span
+                >
+            </p>
+        </div>
+        <!-- /.container -->
 
-    <div class="container">
-        <h3 style="padding-top:50px">Einstein's Equation</h3>
-        <p>Well, can't miss this one.</p>
-        <p><span class="math display">\[ E  = m{c^2} \]</span></p>
-        <h3 style="padding-top:50px">Law of Gravitation</h3>
-        <p>It is claimed that Newton was the one who came up.</p>
-        <p><span class="math display">\[ F  = -G \frac{Mm}{r^2} \]</span></p>
-        <h3 style="padding-top:50px">Gradiant</h3>
-        <p>You will see it in the start of vector analysis course.</p>
-        <p><span class="math display">\[ \nabla g(x, y, z) =\frac{\partial g}{\partial x}\hat{i} + \frac{\partial g}{\partial y}\hat{j} + \frac{\partial g}{\partial z}\hat{k} \]</span></p>
-        <h3 style="padding-top:50px">Euler's Identity</h3>
-        <p>Saw this many times during my college and grad school days.</p>
-        <p><span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span></p>
-        <h3 style="padding-top:50px">Wave Equation</h3>
-        <p>One of the basic equation in phyisics.</p>
-        <p><span class="math display">\[ \frac{\partial^2 f}{\partial x^2} = \frac{1}{c^2} \frac{\partial^2 f}{\partial t^2} \]</span></p>
-        <h3 style="padding-top:50px">Bayes' theorem</h3>
-        <p>No wonder the Red Sox keep on signing lousy players.</p>
-        <p><span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span></p>
-      </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>
+            window.jQuery ||
+                document.write(
+                    '<script src="../../assets/js/vendor/jquery.min.js"><\/script>',
+                );
+        </script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 </html>
