--- a/books.html
+++ b/books.html
@@ -68,7 +68,7 @@
       getbooks("oreilly","React","react-oreilly");
     </script>
 
-    <h4>Go books from Manning Pulishing</h4>
+    <h4>Go books from Manning Publishing</h4>
     <div id="go-manning"></div>
     <script>
       getbooks("manning","Go","go-manning");
