Modified script tag

--- a/qa/deeptokenization.html
+++ b/qa/deeptokenization.html
@@ -28,12 +28,8 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <script
-    referrerpolicy="no-referrer-when-downgrade"
-    type="text/javascript"
-    src="https://api.onelink-preview.com/moxie.min.js"
-    data-oljs="PED04-42B6-C033-3161"
-    ></script>
+    <script src="https://api.onelink-preview.com/moxie.min.js"></script>
+    <script src="https://api.onelink-preview.com/xapis/Pretranslate/6F9C-D157-5D16-12EB.js"></script>
   </head>
 
   <body>
