remove query parm

--- a/qa/index.html
+++ b/qa/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <h1>LIST OF HTML FILES</h1>
             <ul>
-                <li><a href="deeptokenization.html?langPref=es-la">Deep Tokenization</a></li>
+                <li><a href="deeptokenization.html">Deep Tokenization</a></li>
                 <li><a href="domparsertest.html?langPref=es-la">DOM Parser</a></li>
                 <li><a href="lightbox.html?langPref=es-la">Lightbox</a></li>
                 <li><a href="removetags.html?langPref=es-la">Remove Tags</a></li>
