Add sin/cos page

--- a/articles.html
+++ b/articles.html
@@ -52,6 +52,7 @@
                 <p><a href="./probability.html">Basic Probability</a></p>
                 <p><a href="./qm.html">The Schr&ouml;dinger Equation</a></p>
                 <p><a href="./zvsh.html">Eigenvalues &amp; Eigenvectors</a></p>
+                <p><a href="./sincos.html">Sine and Cosine</a></p>
               </div>
         </section>
     </div>
