--- a/qa/domparsertest.html
+++ b/qa/domparsertest.html
@@ -9,7 +9,7 @@
     referrerpolicy="no-referrer-when-downgrade"
     type="text/javascript"
     src="https://api.onelink-preview.com/moxie.min.js"
-    data-oljs="PED04-42B6-C033-3161"
+    data-oljs="P123E-BDEF-2FE3-FD20"
     ></script>
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
