--- a/qa/lightbox.html
+++ b/qa/lightbox.html
@@ -38,7 +38,7 @@
     referrerpolicy="no-referrer-when-downgrade"
     type="text/javascript"
     src="https://api.onelink-preview.com/moxie.min.js"
-    data-oljs="PED04-42B6-C033-3161"
+    data-oljs="P123E-BDEF-2FE3-FD20"
     ></script>
   </head>
     <body>
