--- a/qa/index.html
+++ b/qa/index.html
@@ -39,6 +39,7 @@
                 <li><a href="tokenization.html?langPref=es-la">Tokenization</a></li>
                 <li><a href="translationrules.html?langPref=es-la">Translation Rules</a></li>
                 <li><a href="uticxtest.html?langPref=es-la">UTICX</a></li>
+                <li><a href="blockjliff.html?langPref=es-la">Block Jliff</a></li>
               </ul>
         </div>
     </body>
