--- a/notes/probability.html
+++ b/notes/probability.html
@@ -29,12 +29,14 @@
     </nav>
     <br>
     <br>
-    <main>
-        <div class="container">
-            <div>
+ 
+            <main>
+                <script src="./js/randomball.js"></script>
+            </main>
+            <br>
+            <div class="para">
                 Probability is a branch in mathematics on how likely an event is to occur. Most probalilities are expressed as fractions, decimal numbers or percentages and are measured on a scaled between zero and one. If an event is impossible to occur, the probability is 0. A certain event has a probability of 1. Calculating permutations and combinations are essential on finding probabilities of an event.
             </div>
-            <br>
             <div class="flex-container">
                 <div style="border:1px solid black;"><span class="math-article" >To calculate permutation:</span>
                     <p><span class="math display">\[ _{n}P_{r} = \dfrac{n!}{(n - r)!} \]</span></p>
@@ -44,8 +46,12 @@
                 </div>
             </div>
             <br>
-        </div><!-- /.container -->
-    </main>
+            <div class="para">
+                In probability theory, conditional probability is a measure of the probability of an event occurring, given that another event (by assumption, presumption, assertion or evidence) is already known to have occurred. This particular method relies on event A occurring with some sort of relationship with another event B. This can be written by :
+            </div>
+            <span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span>
+
+
     <br>
     <footer>
         &nbsp;
