--- a/notes/gravitation.html
+++ b/notes/gravitation.html
@@ -31,15 +31,14 @@
     <br>
     <br>
     <div class="container">
-        <h3 style="text-align:center">Sine and Cosine</h3>
-        <p>Sine and Cosine functions are a perfect function to model any systems with oscillation.</p>
+        <h3 style="text-align:center">Einstein's Field Equation</h3>
+        <p>In the general theory of relativity, the Einstein field equations relate the geometry of spacetime to the distribution of matter within it.</p>
         <main>
-            <script src="./js/sincos.js"></script>
+            <script src="./js/orbit.js"></script>
         </main>
         <p>Code was used from <a href="https://p5js.org">p5.js website</a></p>
-        <p>Due to this nature, combinations of sine and cosine are used in Fourier Transform</p>
-        <span class="math display">\[ \hat{F} (k)=\int_{-\infty}^{\infty}f(x)e^{-2\pi ixk}dx\]</span>
-        <p>Using Euler's identity<span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span></p>
+        <p>The Einstein Field Equation can be written as</p>
+        <span class="math display">\[ R_{\mu\nu} - \frac{1}{2} R g_{\mu\nu} + \Lambda g_{\mu\nu} = \frac{8\pi G}{c^4} T_{\mu\nu}\]</span>
         <br>
     </div>
 
