--- a/notes/index.html
+++ b/notes/index.html
@@ -25,6 +25,7 @@
             <a href="linalg.html">Linear Algebra</a>
             <a href="calculus.html">Calculus</a>
             <a href="probability.html">Probability</a>
+            <a href="gravitation.html">EFE</a>
         </div>
     </nav>
     <br>
