--- a/notes/calculus.html
+++ b/notes/calculus.html
@@ -30,7 +30,7 @@
     </nav>
     <br>
     <br>
-    <div class="container">
+    <div onclick="closemenu()" class="container">
         <h3 style="text-align:center">Sine and Cosine</h3>
         <p>Sine and Cosine functions are a perfect function to model any systems with oscillation.</p>
         <main>
