--- a/notes/gravitation.html
+++ b/notes/gravitation.html
@@ -30,7 +30,7 @@
     </nav>
     <br>
     <br>
-    <div class="container">
+    <div onclick="closemenu()" class="container">
         <h3 style="text-align:center">Einstein's Field Equation</h3>
         <p>In the general theory of relativity, the Einstein field equations relate the geometry of spacetime to the distribution of matter within it.</p>
         <main>
