--- a/notes/index.html
+++ b/notes/index.html
@@ -30,7 +30,7 @@
     </nav>
     <br>
     <br>
-    <main>
+    <main onclick="closemenu()">
         <script src="./js/pendulum.js"></script>
     </main>
     
