--- a/notes/linalg.html
+++ b/notes/linalg.html
@@ -30,7 +30,7 @@
     </nav>
     <br>
     <br>
-    <main>
+    <main onclick="closemenu()">
         <div class="container">
             <h3 style="text-align:center">Zombies vs Humans</h3>
             <br>
