--- a/notes/probability.html
+++ b/notes/probability.html
@@ -31,7 +31,7 @@
     <br>
     <br>
  
-            <main>
+            <main onclick="closemenu()">
                 <script src="./js/randomball.js"></script>
             </main>
             <br>
