--- a/go.html
+++ b/go.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/prism.css">
     <script src="css/prism.js"></script>
     <link href="starter-template.css" rel="stylesheet">
+    <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20" ></script>
   </head>
 
   <body>
