--- a/reference.html
+++ b/reference.html
@@ -15,6 +15,7 @@
     <script src="css/prism.js"></script>
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
     <link href="starter-template.css" rel="stylesheet">
+    <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20"></script>
   </head>
 
   <body>
