--- a/equations.html
+++ b/equations.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <script src="css/prism.js"></script>
         <link href="starter-template.css" rel="stylesheet" />
+        <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20"></script>
         <script
             type="text/javascript"
             async=""
