--- a/qm.html
+++ b/qm.html
@@ -16,7 +16,8 @@
     <link href="starter-template.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  </head>
+    <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20"></script>
+   </head>
 
   <body>
 
