--- a/index.html
+++ b/index.html
@@ -131,9 +131,13 @@
                         <a href="https://www.perl.org/" target="_blank">Perl</a>
                     </div>
                     <div>
-                        <a href="https://nodejs.org/en" target="_blank"
-                            >Node.js</a
-                        >
+                        <a href="https://nodejs.org/en" target="_blank">Node.js</a>
+                    </div>
+                    <div>
+                        <a href="./qa/index.html" target="_blank">Quality Assurance</a>
+                    </div>
+                    <div>
+                        <a href="./notes/index.html" target="_blank">Notes</a>
                     </div>
                 </section>
             </div>
