Added few notes

--- a/notes/gravitation.html
+++ b/notes/gravitation.html
@@ -37,7 +37,7 @@
         <main>
             <script src="./js/orbit.js"></script>
         </main>
-        <p>Code was used from <a href="https://p5js.org">p5.js website</a></p>
+        <p>Rotating and revolving object. Code was used from <a href="https://p5js.org">p5.js website</a></p>
         <p>The Einstein Field Equation can be written as</p>
         <span class="math display">\[ R_{\mu\nu} - \frac{1}{2} R g_{\mu\nu} + \Lambda g_{\mu\nu} = \frac{8\pi G}{c^4} T_{\mu\nu}\]</span>
         <br>
