--- a/notes/probability.html
+++ b/notes/probability.html
@@ -37,7 +37,7 @@
             </main>
             <br>
             <div class="para">
-                <p>Code was used from <a href="https://p5js.org">p5.js website</a></p>
+                <p>Widget for randomness. Code was used from <a href="https://p5js.org">p5.js website</a></p>
                 Probability is a branch in mathematics on how likely an event is to occur. Most probalilities are expressed as fractions, decimal numbers or percentages and are measured on a scaled between zero and one. If an event is impossible to occur, the probability is 0. A certain event has a probability of 1. Calculating permutations and combinations are essential on finding probabilities of an event.
             </div>
             <div class="flex-container">
