--- a/notes/calculus.html
+++ b/notes/calculus.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Sample page</title>
+    <title>Sine and Cosine</title>
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
@@ -37,7 +37,7 @@
         <main>
             <script src="./js/sincos.js"></script>
         </main>
-        <p>Code was used from <a href="https://p5js.org">p5.js website</a></p>
+        <p>Used p5 libray for page in Calculus. Code was used from <a href="https://p5js.org">p5.js website</a></p>
         <p>Due to this nature, combinations of sine and cosine are used in Fourier Transform</p>
         <span class="math display">\[ \hat{F} (k)=\int_{-\infty}^{\infty}f(x)e^{-2\pi ixk}dx\]</span>
         <p>Using Euler's identity<span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span></p>
