--- a/notes/calculus.html
+++ b/notes/calculus.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="./js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
-    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20"></script>
   </head>
   <body>
@@ -40,9 +39,20 @@
         <p>Used p5 libray for page in Calculus. Code was used from <a href="https://p5js.org">p5.js website</a></p>
         <p>Due to this nature, combinations of sine and cosine are used in Fourier Transform</p>
         <span class="math display">\[ \hat{F} (k)=\int_{-\infty}^{\infty}f(x)e^{-2\pi ixk}dx\]</span>
-        <p>Using Euler's identity<span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span></p>
+        <p>Using Euler's identity</p>
+        <span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span>
         <br>
     </div>
+    <!-- dynamically load mathjax for compatibility with self-contained -->
+    <script>
+    (function () {
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src  = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML";
+      
+      document.getElementsByTagName("head")[0].appendChild(script);
+    })();
+  </script>
 
     <footer>
         &nbsp;
