--- a/index.html
+++ b/index.html
@@ -136,12 +136,27 @@
                     <div>
                         <a href="./qa/index.html" target="_blank">Quality Assurance</a>
                     </div>
-                    <div>
-                        <a href="./notes/index.html" target="_blank">Notes</a>
-                    </div>
                 </section>
             </div>
             <br />
+            <div>
+                <section
+                    style="
+                        border: solid;
+                        border-radius: 20px;
+                        font-size: large;
+                        padding-left: 10px;
+                        padding-bottom: 5px;
+                    "
+                >
+                    <h4>Other Links</h4>
+                    <div>
+                        <a href="./notes/index.html" target="_blank">Notes</a>
+                    </div>
+                    <div>
+                        <a href="./fft/index.html" target="_blank">Final Fantasy Tactics</a>
+                    </div>
+                </section>
         </div>
         <!-- /.container -->
         <script>
