--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                     <div>
                         <a href="./fft/index.html" target="_blank">Final Fantasy Tactics</a>
                     </div>
+                    <div>
+                        <a href="./redsoxhistory/index.html" target="_blank">Red Sox Players of the past</a>
+                    </div>
                 </section>
         </div>
         <!-- /.container -->
