--- a/equations.html
+++ b/equations.html
@@ -21,7 +21,9 @@
         <link rel="stylesheet" href="css/style.css" />
         <script src="css/prism.js"></script>
         <link href="starter-template.css" rel="stylesheet" />
-        <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20"></script>
+        <script src="https://api.onelink-preview.com/moxie.min.js"></script>
+        <script src="https://api.onelink-preview.com/xapis/Pretranslate/4DEB-E6F8-36C8-3783.js"></script>
+        <script src="https://api.onelink-preview.com/xapis/Pretranslate/B207-1744-6BD2-4C2C.js"></script>
         <script
             type="text/javascript"
             async=""
