--- a/fft/characters.html
+++ b/fft/characters.html
@@ -13,6 +13,7 @@
         <a class="intro" href="index.html">intro</a>
         <a class="story" href="story.html">story</a>
         <a class="characters" href="characters.html">characters</a>
+        <a class="jobs" href="jobs.html">jobs</a>
     </nav>
   <article>
       <h3>Protagonists</h3>
