--- a/fft/index.html
+++ b/fft/index.html
@@ -12,6 +12,7 @@
         <a class="intro" href="index.html">intro</a>
         <a class="story" href="story.html">story</a>
         <a class="characters" href="characters.html">characters</a>
+        <a class="jobs" href="jobs.html">jobs</a>
     </nav>
     <article>
         <h1 id="tufte-css">Introduction</h1>
