Add few more html

--- a/notes/calculus.html
+++ b/notes/calculus.html
@@ -42,6 +42,7 @@
         <p>Using Euler's identity</p>
         <span class="math display">\[ e^{i \theta} = cos \theta + isin \theta \]</span>
         <br>
+        <p><a href="./plotter">Plot Graph</a></p>
     </div>
     <!-- dynamically load mathjax for compatibility with self-contained -->
     <script>
