--- a/fft/characters.html
+++ b/fft/characters.html
@@ -14,6 +14,7 @@
         <a class="story" href="story.html">story</a>
         <a class="characters" href="characters.html">characters</a>
         <a class="jobs" href="jobs.html">jobs</a>
+        <a class="chapters" href="chapters.html">chapters</a>
     </nav>
   <article>
       <h3>Protagonists</h3>
