--- a/fft/index.html
+++ b/fft/index.html
@@ -13,6 +13,7 @@
         <a class="story" href="story.html">story</a>
         <a class="characters" href="characters.html">characters</a>
         <a class="jobs" href="jobs.html">jobs</a>
+        <a class="chapters" href="chapters.html">chapters</a>
     </nav>
     <article>
         <h1 id="tufte-css">Introduction</h1>
