Add new conetnets

--- a/fft/index.html
+++ b/fft/index.html
@@ -17,6 +17,7 @@
     </nav>
     <article>
         <h1 id="tufte-css">Introduction</h1>
+        <a href="/fft/remake" target="_blank">Open Ivalice Chronicle Page</a>
         <section>
             <p>Sword in hand, a warrior clutches stone to breast. In sword etched he his fading memories. In stone, his tempered skill. By sword attested, by stone revealed. Their tale can now be told.</p>
         </section>
