--- a/books.html
+++ b/books.html
@@ -74,6 +74,12 @@
       getbooks("manning","Go","go-manning");
     </script>
 
+    <h4>Python books from Manning Publishing</h4>
+    <div id="python-manning"></div>
+    <script>
+      getbooks("manning","Python","python-manning");
+    </script>
+
     </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
