--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
                         <a href="./notes/index.html" target="_blank">Notes</a>
                     </div>
                     <div>
+                        <a href="./qnotes/index.html" target="_blank">Scripting Setup and Tips</a>
+                    </div>
+                    <div>
                         <a href="./fft/index.html" target="_blank">Final Fantasy Tactics</a>
                     </div>
                     <div>
