--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
                 >
                     <h4>Other Links</h4>
                     <div>
-                        <a href="./notes/index.html" target="_blank">Notes</a>
+                        <a href="./notes" target="_blank">Notes</a>
                     </div>
                     <div>
-                        <a href="./qnotes/index.html" target="_blank">Scripting Setup and Tips</a>
+                        <a href="./qnotes" target="_blank">Scripting Setup and Tips</a>
                     </div>
                     <div>
-                        <a href="./fft/index.html" target="_blank">Final Fantasy Tactics</a>
+                        <a href="./fft" target="_blank">Final Fantasy Tactics</a>
                     </div>
                     <div>
-                        <a href="./redsoxhistory/index.html" target="_blank">Red Sox Players of the past</a>
+                        <a href="./redsoxhistory" target="_blank">Red Sox Players of the past</a>
                     </div>
                 </section>
         </div>
