--- a/fft/characters.html
+++ b/fft/characters.html
@@ -168,7 +168,7 @@
       </table>
   </article>
   <footer>
-    Final Fantasy Tactics © 1997, 2007, 2023 Square Enix Co., Ltd. All rights reserved. This is an unofficial fan guide.
+    Final Fantasy Tactics © 1997, 2007, 2023, 2025 Square Enix Co., Ltd. All rights reserved. This is an unofficial fan guide.
 </footer>
 </body>
 </html>
