--- a/fft/index.html
+++ b/fft/index.html
@@ -17,7 +17,7 @@
     </nav>
     <article>
         <h1 id="tufte-css">Introduction</h1>
-        <a href="/fft/remake" target="_blank">Open Ivalice Chronicle Page</a>
+        <a style="font-size: large;" href="/fft/remake" target="_blank">Open Ivalice Chronicle Page</a>
         <section>
             <p>Sword in hand, a warrior clutches stone to breast. In sword etched he his fading memories. In stone, his tempered skill. By sword attested, by stone revealed. Their tale can now be told.</p>
         </section>
@@ -31,7 +31,7 @@
         </section>
     </article>
     <footer>
-        Final Fantasy Tactics © 1997, 2007, 2023 Square Enix Co., Ltd. All rights reserved. This is an unofficial fan guide.
+        Final Fantasy Tactics © 1997, 2007, 2023, 2025 Square Enix Co., Ltd. All rights reserved. This is an unofficial fan guide.
     </footer>
 </body>
 </html>
