Fix and added links

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                         <a href="./qnotes" target="_blank">Scripting Setup and Tips</a>
                     </div>
                     <div>
+                        <a href="./bnotes" target="_blank">Bash Scripting Guide</a>
+                    </div>
+                    <div>
                         <a href="./fft" target="_blank">Final Fantasy Tactics</a>
                     </div>
                     <div>
