Changed link and add page

--- a/index.html
+++ b/index.html
@@ -154,10 +154,7 @@
                         <a href="./notes" target="_blank">Notes</a>
                     </div>
                     <div>
-                        <a href="./qnotes" target="_blank">Scripting Setup and Tips</a>
-                    </div>
-                    <div>
-                        <a href="./bnotes" target="_blank">Bash Scripting Guide</a>
+                        <a href="./snotes" target="_blank">Scripting Setup and Tips</a>
                     </div>
                     <div>
                         <a href="./fft" target="_blank">Final Fantasy Tactics</a>
