--- a/snotes/index.html
+++ b/snotes/index.html
@@ -29,6 +29,15 @@
     <li><a href="https://mosubaga.github.io/jnotes" target="_blank">Intro to Julia</a></li>
 </ul>
 </div>
+<p>Once you get familiar with scripting, you can move on to other topics.</p>
+
+<div class="card">
+  <h4>If you are interested in other topics once you get familiar with scripting:</h4>
+<ul>
+    <li><a href="https://mosubaga.github.io/mlnotes" target="_blank">Intro to Machine Learning</a></li>
+    <li><a href="https://mosubaga.github.io/dlnotes" target="_blank">Intro to Deep Learning</a></li>
+</ul>
+</div>
 </main>
 
 </body>
